test/syc/good/shr.c
/*
 * Shift right
 */

int a, b;

int shl(void)
{
	return a >> b;
}
