test/syc/bad/confldeffun.c
/*
 * Conflicting type 'long()' for 'f', previously declared as 'int()'.
 */

int f(void);
long f(void)
{
}
